--- a/YDev.Admin/Views/Iletisim/Index.cshtml
+++ b/YDev.Admin/Views/Iletisim/Index.cshtml
@@ -136,3 +136,8 @@
     <!-- END CONTENT BODY -->
 </div>
 <!-- END CONTENT -->
+
+@section scripts
+{
+    <script src="~/assets/custom/contact.js" type="text/javascript"></script>
+}
