--- a/YDev.Web/wwwroot/css/style.css
+++ b/YDev.Web/wwwroot/css/style.css
@@ -5293,7 +5293,7 @@ img.loader{
 }
 /* ---- 9.4. Page title 4 -------------- */
 .title-4 {
-	background: #41a1b7 url('../images/page-titles/Page-title-1.jpg') no-repeat 50% 50%;
+	background: #41a1b7 url('../images/bar.jpg') no-repeat 50% 50%;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	-webkit-background-size: cover;
