--- a/YDev.Admin/Views/Content/IcerikEkle.cshtml
+++ b/YDev.Admin/Views/Content/IcerikEkle.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = Model.Id == 0 ? "İçerik Ekle" : "İçerik Düzenle";
     List<Category> categories = ViewData["Categories"] as List<Category>;
-    List<ViewDataUploadFilesResult> files = ViewData["Files"] as List<ViewDataUploadFilesResult>;
+    List<Media> files = ViewData["Files"] as List<Media>;
 }
 
 <!-- BEGIN CONTENT -->
@@ -60,13 +60,13 @@
                                     <option value="" selected disabled>Seçiniz</option>
                                     @foreach (var item in files)
                                     {
-                                        if (Model.CoverImage == item.url)
+                                        if (Model.CoverImage == item.Url)
                                         {
-                                            <option selected value="@item.url">@item.name (@item.widthHeight)</option>
+                                            <option selected value="@item.Url">@item.Content (@item.Url)</option>
                                         }
                                         else
                                         {
-                                            <option value="@item.url">@item.name (@item.widthHeight)</option>
+                                            <option value="@item.Url">@item.Content (@item.Url)</option>
                                         }
                                     }
                                 </select>
@@ -101,3 +101,7 @@
     <!-- END CONTENT BODY -->
 </div>
 <!-- END CONTENT -->
+@section scripts
+{
+    <script src="~/assets/custom/icerikekle.min.js" type="text/javascript"></script>
+}
