--- a/YDev.Admin/Views/Menu/Index.cshtml
+++ b/YDev.Admin/Views/Menu/Index.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Menü Yönetimi";
     List<Category> categories = ViewData["Categories"] as List<Category>;
     List<MenuObject> menuObject = ViewData["MenuObject"] as List<MenuObject>;
+    List<MenuObject> menuObjectAlt = ViewData["MenuObjectAlt"] as List<MenuObject>;
 }
 
 <!-- BEGIN CONTENT -->
@@ -32,77 +33,156 @@
             <div class="col-md-12">
                 <div class="portlet light bordered">
                     <div class="portlet-body">
-
                         <div class="row">
+                            <div class="col-md-6 col-sm-12 col-xs-12">
+                                <div class="row">
 
-                            <div class="form-group">
-                                <label class="control-label col-md-2">Menüye Kategori Ekleyin</label>
-                                <div class="col-md-6">
-                                    <select id="categoryId" class="form-control">
-                                        @foreach (var item in categories)
-                                        {
-                                            <option value="@item.Id">@item.Name</option>
-
-                                        }
-                                    </select>
-                                </div>
-                                <div class="col-md-4">
-                                    <a href="javascript:;" id="kategori_ekle" class="btn green"><i class="fa fa-arrow-down"></i> Ekle</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <hr />
-
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="dd" id="nestable_list_3">
-                                    <ol class="dd-list">
-                                        @foreach (var item in menuObject)
-                                        {
-                                            <li class="dd-item dd3-item" data-id="@item.Id">
-                                                <div class="dd-handle dd3-handle"> </div>
-                                                <div class="dd3-content removeMenu" data-id="@item.Id">@categories.FirstOrDefault(f => f.Id == item.Id).Name  <i class="glyphicon glyphicon-trash right"></i></div>
-
-
-                                                @if (item.Children != null)
+                                    <div class="form-group">
+                                        <label class="control-label col-md-2">Üst Menüye Kategori Ekleyin</label>
+                                        <div class="col-md-6">
+                                            <select id="categoryId" class="form-control">
+                                                @foreach (var item in categories)
                                                 {
-                                                    <ol class="dd-list">
+                                                    <option value="@item.Id">@item.Name</option>
 
-                                                        @foreach (var subItem in item.Children)
+                                                }
+                                            </select>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <a href="javascript:;" id="kategori_ekle" class="btn green"><i class="fa fa-arrow-down"></i> Ekle</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <hr />
+
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="dd" id="nestable_list_3">
+                                            <ol class="dd-list">
+                                                @foreach (var item in menuObject)
+                                                {
+                                                    <li class="dd-item dd3-item" data-id="@item.Id">
+                                                        <div class="dd-handle dd3-handle"> </div>
+                                                        <div class="dd3-content removeMenu" data-id="@item.Id">@categories.FirstOrDefault(f => f.Id == item.Id).Name  <i class="glyphicon glyphicon-trash right"></i></div>
+
+
+                                                        @if (item.Children != null)
                                                         {
-                                                            <li class="dd-item dd3-item" data-id="@subItem.Id">
-                                                                <div class="dd-handle dd3-handle"> </div>
-                                                                <div class="dd3-content removeMenu" data-id="@subItem.Id">@categories.FirstOrDefault(f => f.Id == subItem.Id).Name  <i class="glyphicon glyphicon-trash right"></i></div>
-                                                                @if (subItem.Children != null)
+                                                            <ol class="dd-list">
+
+                                                                @foreach (var subItem in item.Children)
                                                                 {
-                                                                    <ol class="dd-list">
-                                                                        @foreach (var subItem2 in subItem.Children)
+                                                                    <li class="dd-item dd3-item" data-id="@subItem.Id">
+                                                                        <div class="dd-handle dd3-handle"> </div>
+                                                                        <div class="dd3-content removeMenu" data-id="@subItem.Id">@categories.FirstOrDefault(f => f.Id == subItem.Id).Name  <i class="glyphicon glyphicon-trash right"></i></div>
+                                                                        @if (subItem.Children != null)
                                                                         {
-                                                                            <li class="dd-item dd3-item" data-id="@subItem2.Id">
-                                                                                <div class="dd-handle dd3-handle"> </div>
-                                                                                <div class="dd3-content removeMenu" data-id="@subItem2.Id">@categories.FirstOrDefault(f => f.Id == subItem2.Id).Name  <i class="glyphicon glyphicon-trash right"></i></div>
-                                                                            </li>
+                                                                            <ol class="dd-list">
+                                                                                @foreach (var subItem2 in subItem.Children)
+                                                                                {
+                                                                                    <li class="dd-item dd3-item" data-id="@subItem2.Id">
+                                                                                        <div class="dd-handle dd3-handle"> </div>
+                                                                                        <div class="dd3-content removeMenu" data-id="@subItem2.Id">@categories.FirstOrDefault(f => f.Id == subItem2.Id).Name  <i class="glyphicon glyphicon-trash right"></i></div>
+                                                                                    </li>
+                                                                                }
+
+
+                                                                            </ol>
                                                                         }
 
-
-                                                                    </ol>
+                                                                    </li>
                                                                 }
-
-                                                            </li>
+                                                            </ol>
                                                         }
-                                                    </ol>
+
+                                                    </li>
                                                 }
 
-                                            </li>
-                                        }
 
+                                            </ol>
+                                        </div>
 
-                                    </ol>
+                                        <div class="margin-bottom-10 margin-top-10">
+                                            <button style="float:right" type="button" class="btn green btn-outline sbold" id="menu_kaydet">Tasarımı Kaydet</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6 col-sm-12 col-xs-12" style="border-left: cyan;border-left-style: dashed;">
+                                <div class="row">
+
+                                    <div class="form-group">
+                                        <label class="control-label col-md-2">Alt Menüye Kategori Ekleyin</label>
+                                        <div class="col-md-6">
+                                            <select id="categoryIdAlt" class="form-control">
+                                                @foreach (var item in categories)
+                                                {
+                                                    <option value="@item.Id">@item.Name</option>
+
+                                                }
+                                            </select>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <a href="javascript:;" id="kategori_ekle_alt" class="btn green"><i class="fa fa-arrow-down"></i> Ekle</a>
+                                        </div>
+                                    </div>
                                 </div>
 
-                                <div class="margin-bottom-10 margin-top-10">
-                                    <button style="float:right" type="button" class="btn green btn-outline sbold" id="menu_kaydet">Tasarımı Kaydet</button>
+                                <hr />
+
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="dd" id="nestable_list_2">
+                                            <ol class="dd-list">
+                                                @foreach (var item in menuObjectAlt)
+                                                {
+                                                    <li class="dd-item dd3-item" data-id="@item.Id">
+                                                        <div class="dd-handle dd3-handle"> </div>
+                                                        <div class="dd3-content removeMenuAlt" data-id="@item.Id">@categories.FirstOrDefault(f => f.Id == item.Id).Name  <i class="glyphicon glyphicon-trash right"></i></div>
+
+
+                                                        @if (item.Children != null)
+                                                        {
+                                                            <ol class="dd-list">
+
+                                                                @foreach (var subItem in item.Children)
+                                                                {
+                                                                    <li class="dd-item dd3-item" data-id="@subItem.Id">
+                                                                        <div class="dd-handle dd3-handle"> </div>
+                                                                        <div class="dd3-content removeMenuAlt" data-id="@subItem.Id">@categories.FirstOrDefault(f => f.Id == subItem.Id).Name  <i class="glyphicon glyphicon-trash right"></i></div>
+                                                                        @if (subItem.Children != null)
+                                                                        {
+                                                                            <ol class="dd-list">
+                                                                                @foreach (var subItem2 in subItem.Children)
+                                                                                {
+                                                                                    <li class="dd-item dd3-item" data-id="@subItem2.Id">
+                                                                                        <div class="dd-handle dd3-handle"> </div>
+                                                                                        <div class="dd3-content removeMenuAlt" data-id="@subItem2.Id">@categories.FirstOrDefault(f => f.Id == subItem2.Id).Name  <i class="glyphicon glyphicon-trash right"></i></div>
+                                                                                    </li>
+                                                                                }
+
+
+                                                                            </ol>
+                                                                        }
+
+                                                                    </li>
+                                                                }
+                                                            </ol>
+                                                        }
+
+                                                    </li>
+                                                }
+
+
+                                            </ol>
+                                        </div>
+
+                                        <div class="margin-bottom-10 margin-top-10">
+                                            <button style="float:right" type="button" class="btn green btn-outline sbold" id="menu_kaydet_alt">Tasarımı Kaydet</button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -118,9 +198,13 @@
         <div class="portlet light bordered hidden">
             <div class="portlet-body">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-6 col-sm-12 col-xs-12">
                         <h3>Serializ edilen menü</h3>
                         <textarea id="nestable_list_3_output" class="form-control col-md-12 margin-bottom-10" readonly></textarea>
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <h3>Serializ edilen alt menü</h3>
+                        <textarea id="nestable_list_2_output" class="form-control col-md-12 margin-bottom-10" readonly></textarea>
                     </div>
                 </div>
             </div>
