--- a/YDev.Admin/Views/Shared/_Layout.cshtml
+++ b/YDev.Admin/Views/Shared/_Layout.cshtml
@@ -33,7 +33,8 @@
     {
         <link href="~/assets/global/plugins/jquery-nestable/jquery.nestable.css" rel="stylesheet" type="text/css" />
     }
-    @if (nav.Contains("content") || nav.Contains("slider") || nav.Contains("iletisim"))
+    @if (nav.Contains("content") || nav.Contains("slider") 
+        || nav.Contains("iletisim") || nav.Contains("galeriler"))
     {
         <link href="~/assets/global/plugins/datatables/datatables.min.css" rel="stylesheet" type="text/css" />
         <link href="~/assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css" rel="stylesheet" type="text/css" />
@@ -418,9 +419,10 @@
     @if (nav.Contains("menu"))
     {
         <script src="~/assets/global/plugins/jquery-nestable/jquery.nestable.js" type="text/javascript"></script>
-        <script src="~/assets/pages/scripts/ui-nestable.min.js" type="text/javascript"></script>
+        <script src="~/assets/custom/menu.js" type="text/javascript"></script>
     }
-    @if (nav.Contains("content") || nav.Contains("slider") || nav.Contains("iletisim"))
+    @if (nav.Contains("content") || nav.Contains("slider") 
+        || nav.Contains("iletisim") || nav.Contains("galeriler"))
     {
         <script src="~/assets/global/scripts/datatable.js" type="text/javascript"></script>
         <script src="~/assets/global/plugins/datatables/datatables.min.js" type="text/javascript"></script>
@@ -432,9 +434,6 @@
         <script src="~/assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.js" type="text/javascript"></script>
         <script src="~/assets/global/plugins/bootstrap-confirmation/bootstrap-confirmation.min.js" type="text/javascript"></script>
 
-        <script src="~/assets/custom/icerikekle.min.js" type="text/javascript"></script>
-        <script src="~/assets/custom/slider.js" type="text/javascript"></script>
-        <script src="~/assets/custom/contact.js" type="text/javascript"></script>
     }
 
     <!-- END PAGE LEVEL SCRIPTS -->
