--- a/YDev.Admin/Views/Slider/Index.cshtml
+++ b/YDev.Admin/Views/Slider/Index.cshtml
@@ -132,3 +132,8 @@
     <!-- END CONTENT BODY -->
 </div>
 <!-- END CONTENT -->
+
+@section scripts
+{
+    <script src="~/assets/custom/slider.js" type="text/javascript"></script>
+}
