--- a/YDev.Web/Views/Iletisim/Index.cshtml
+++ b/YDev.Web/Views/Iletisim/Index.cshtml
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-    <div class="padd-vertical-45">
+    @*<div class="padd-vertical-45">
         <div class="container">
             <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
             <div id="map_canvas" style="height: 450px; width: 100%;">
@@ -96,6 +96,6 @@
                 </script>
             </div>
         </div>
-    </div>
+    </div>*@
 </div>
 <!-- Content End -->
